# testing-spring-2024

./: .clang-format  .gitignore  CMakeLists.txt  README-lv.md  README.md
.github/workflows/: CI.yml  test.yml
src/: CMakeLists.txt  action.cc  action.hh  event.cc  event.hh  lib.cc  lib.cpp  lib.hh  main.cc  main.cpp  main_lib.cpp  main_lib.h  memoryCalculations.md  player.cc  player.hh  role.cc  role.hh  room.cc  room.hh  test.cc  test.cpp  test_validation.cc  validation.cc  validation.hh
src/Cppunit/: CMakeLists.txt  cppunit.h
src/Prep/: CMakeLists.txt  Prep.cpp  Prep.h
src/cppunit/: CMakeLists.txt  cppunit.hh
src/modules/: CMakeLists.txt  action.cc  action.hh  event.cc  event.hh  player.cc  player.hh  role.cc  role.hh  room.cc  room.hh  time.cc  time.hh
src/prep/: CMakeLists.txt  prep.cc  prep.cpp  prep.hh  timeUtils.cpp  timeUtils.hh
src/publicTests/: customs.i1  customs.i2  customs.i3  customs.i4  customs.i5  customs.i7  customs.o2  customs.o3  customs.o4  customs.o5  customs.o6  customs.o7
